Fjerner feilaktig bruk av CONTAINER_JAR_PATTERN som skaper problemer med 8u181-jdk. Bruker nytt baseimage for Docker.